# PYTHON-CODERHOUSE

./: entrega1.py
tienda_clientes_proyecto/: PreEntrega1_placeholder.txt  README.md  pyproject.toml
tienda_clientes_proyecto/ejemplos/: demo_clientes.py
tienda_clientes_proyecto/tienda_clientes/: __init__.py  cliente.py  gestor_clientes.py
