[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tienda-clientes"
version = "0.1.0"
description = "Paquete de ejemplo para modelar clientes en una página de compras"
authors = [
  { name = "Tu Nombre", email = "tu_correo@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://example.com/tienda-clientes"

[tool.setuptools.packages.find]
where = ["."]
